# alligator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deps.ts  rustfmt.toml
.github/workflows/: description.yml  publish.yml
src/: body.rs  constants.ts  env.rs  err.rs  main.rs  main.ts  payload.rs  server.ts  shutdown.rs  types.ts  webhook.rs
src/helpers/: deliver-batch.ts  merge-batch-body.ts  merge-request-body.ts  validate-path.ts
