[package]
name = "alligator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.19.2", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
futures = { version = "0.3.21", default-features = false, features = ["async-await"] }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_json = "1.0.81"
hyper = { version = "0.14.19", features = ["full"] }
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
regex = "1.5.6"